fixed size of products card of products page for small screen and aligned it to centr

--- a/src/Components/Products.css
+++ b/src/Components/Products.css
@@ -1,6 +1,6 @@
 .imagecardclass {
   height: 250px;
-  width: 250px;
+  width: 100%;
 }
 .link{
   color: black;
